--- a/funcional.html
+++ b/funcional.html
@@ -11,7 +11,7 @@
     <!--[if IE]>
     	<link rel="stylesheet" type="text/css" href="/css/ie-output.css" />
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="/css/output.css">
+    <link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/output.css">
     <link rel="preload" as="font" href="/fuentes/Bevan-Regular.ttf" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" as="font" href="/fuentes/gibson-regular.ttf" type="font/ttf" crossorigin="anonymous">
     <!-- Global site tag (gtag.js) - Google Analytics -->
