--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -9,11 +9,11 @@
     <meta name="Description" content="MASTERGYM se dedica principalmente a fomentar disciplina, conciencia del compromiso diario para alcanzar un estado óptimo de salud, disfrutando plenamente lo que hacemos con pasión, ánimo, vigor y alegría.">
     <meta http-equiv="X-UA-Compatible">
     <!--[if IE]>
-    	<link rel="stylesheet" type="text/css" href="/css/ie-output.css" />
+    	<link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/ie-output.css" />
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="/css/output.css">
-    <link rel="preload" as="font" href="/fuentes/Bevan-Regular.ttf" type="font/ttf" crossorigin="anonymous">
-    <link rel="preload" as="font" href="/fuentes/gibson-regular.ttf" type="font/ttf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/output.css">
+    <link rel="preload" as="font" href="https://elwil001.github.io/mastergym-site/fuentes/Bevan-Regular.ttf" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://elwil001.github.io/mastergym-site/fuentes/gibson-regular.ttf" type="font/ttf" crossorigin="anonymous">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140615648-1"></script>
     <script>
@@ -26,7 +26,7 @@
 </head>
 <nav>
     <div id="logo" class="navlink">
-      <a href="index.html" id="logoLink"><img src="/imagenes/MasterGymLogo.png" alt="MasterGym logo"></a>
+      <a href="index.html" id="logoLink"><img src="https://elwil001.github.io/mastergym-site/imagenes/MasterGymLogo.png" alt="MasterGym logo"></a>
     </div>
     <div class="navlink texto" id="serviciosDiv">
       <a href="servicios.html" id="serviciosLink">servicios</a>
@@ -51,7 +51,7 @@
     </noscript>
       <header class="banner" id="somosBanner" role="banner">
                 <div id="izquierda">
-          <img src="/imagenes/quienessomos_banner.png" alt="Alumno con máquina">
+          <img src="https://elwil001.github.io/mastergym-site/imagenes/quienessomos_banner.png" alt="Alumno con máquina">
         </div>
         <div id="centro">
           <div class="ladrillos-contenedor">
@@ -59,12 +59,12 @@
               <h1>Quiénes Somos</h1>
             </div>
             <div class="banner-logo">
-              <img src="/imagenes/MasterGymLogoIcon2.png" alt="">
+              <img src="https://elwil001.github.io/mastergym-site/imagenes/MasterGymLogoIcon2.png" alt="">
             </div>
           </div>
         </div>
         <div id="derecha">
-          <img src="/imagenes/quienessomos_banner2.png" alt="Alumno con hack prensa">
+          <img src="https://elwil001.github.io/mastergym-site/imagenes/quienessomos_banner2.png" alt="Alumno con hack prensa">
         </div>
       </header>
       <section class="contenido" role="main">
@@ -121,9 +121,9 @@
 </div>
 </section>
 <section id="iconos-sociales" role="region" aria-label="iconossociales">
-  <div><a href="https://es-la.facebook.com/MasterGYMBarranco/" target="_blank" rel="noreferrer"><img src="/imagenes/mg_facebook.png" alt="mastergympáginadefacebook"></a></div>
-  <div><a href="https://www.youtube.com/channel/UCqzBh7Ax1jAfQqc5OmfxC3Q" target="_blank" rel="noreferrer"><img src="/imagenes/mg_youtube.png" alt="mastergymcanaldeyoutube"></a></div>
-  <div><a href="https://www.instagram.com/mastergymbarranco/" target="_blank" rel="noreferrer"><img src="/imagenes/mg_instagram.png" alt="mastergympáginadeinstagram"></a></div>
+  <div><a href="https://es-la.facebook.com/MasterGYMBarranco/" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_facebook.png" alt="mastergympáginadefacebook"></a></div>
+  <div><a href="https://www.youtube.com/channel/UCqzBh7Ax1jAfQqc5OmfxC3Q" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_youtube.png" alt="mastergymcanaldeyoutube"></a></div>
+  <div><a href="https://www.instagram.com/mastergymbarranco/" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_instagram.png" alt="mastergympáginadeinstagram"></a></div>
 </section>
 </footer>      <script src="/js/imagenColor.js"></script>
       <script src="/js/serviciosMenu.js"></script>
