Updated script references

--- a/funcional.html
+++ b/funcional.html
@@ -141,7 +141,7 @@ Me encantó buen gym. cómodo y agradable.</p></div>          </div>
   <div><a href="https://www.youtube.com/channel/UCqzBh7Ax1jAfQqc5OmfxC3Q" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_youtube.png" alt="mastergymcanaldeyoutube"></a></div>
   <div><a href="https://www.instagram.com/mastergymbarranco/" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_instagram.png" alt="mastergympáginadeinstagram"></a></div>
 </section>
-</footer>  <script src="/js/importarYoutubeFuncional.js"></script>
-      <script src="/js/serviciosMenu.js"></script>
+</footer>  <script src="https://elwil001.github.io/mastergym-site/js/importarYoutubeFuncional.js"></script>
+      <script src="https://elwil001.github.io/mastergym-site/js/serviciosMenu.js"></script>
   </body>
 </html>
