--- a/maquinas.html
+++ b/maquinas.html
@@ -11,7 +11,9 @@
     <!--[if IE]>
     	<link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/ie-output.css" />
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/output.css">
+    <link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/banner.css">
+    <link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/elementos.css">
+    <link rel="stylesheet" type="text/css" href="https://elwil001.github.io/mastergym-site/css/contenido.css">
     <link rel="preload" as="font" href="https://elwil001.github.io/mastergym-site/fuentes/Bevan-Regular.ttf" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" as="font" href="https://elwil001.github.io/mastergym-site/fuentes/gibson-regular.ttf" type="font/ttf" crossorigin="anonymous">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -154,8 +156,8 @@ El mejor gym de Barranco. Buena infraestructura, máquinas modernas, buen ambien
   <div><a href="https://www.youtube.com/channel/UCqzBh7Ax1jAfQqc5OmfxC3Q" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_youtube.png" alt="mastergymcanaldeyoutube"></a></div>
   <div><a href="https://www.instagram.com/mastergymbarranco/" target="_blank" rel="noreferrer"><img src="https://elwil001.github.io/mastergym-site/imagenes/mg_instagram.png" alt="mastergympáginadeinstagram"></a></div>
 </section>
-</footer>  <script src="/js/galeriaColor.js"></script>
-  <script src="/js/panorama.js"></script>
-      <script src="/js/serviciosMenu.js"></script>
+</footer>  <script src="https://elwil001.github.io/mastergym-site/js/galeriaColor.js"></script>
+  <script src="https://elwil001.github.io/mastergym-site/js/panorama.js"></script>
+      <script src="https://elwil001.github.io/mastergym-site/js/serviciosMenu.js"></script>
   </body>
 </html>
